--- a/PostLiveClient/form/PostLiveClient.ui
+++ b/PostLiveClient/form/PostLiveClient.ui
@@ -26,7 +26,7 @@
      <x>0</x>
      <y>0</y>
      <width>652</width>
-     <height>23</height>
+     <height>20</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_File">
@@ -41,7 +41,14 @@
     <addaction name="menu_Devices"/>
     <addaction name="actionFile"/>
    </widget>
+   <widget class="QMenu" name="menu_Config">
+    <property name="title">
+     <string>&amp;Config</string>
+    </property>
+    <addaction name="action_Server"/>
+   </widget>
    <addaction name="menu_File"/>
+   <addaction name="menu_Config"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <action name="action_Play">
@@ -67,6 +74,11 @@
   <action name="actionFile">
    <property name="text">
     <string>File</string>
+   </property>
+  </action>
+  <action name="action_Server">
+   <property name="text">
+    <string>&amp;Server</string>
    </property>
   </action>
  </widget>
